--- a/web/pom.xml
+++ b/web/pom.xml
@@ -27,8 +27,25 @@
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
-      </plugin>
-      <plugin>
+        </plugin>
+        <plugin>
+          <!-- https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin -->
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+        <configuration>
+          <username>ideaUs</username>
+          <password>ideaPas</password>
+
+          <!--<path>/${project.build.finalName}</path>-->
+          <path>/taskManagerMultiModule</path>
+          <warFile>target/${project.build.finalName}.war</warFile>
+          <!--<url>http://localhost:8080/manager/text</url>-->
+          <!--<url>http://localhost:8080/manager</url>-->
+        </configuration>
+
+        </plugin>
+        <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
