--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -10,6 +10,29 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dao</artifactId>
+    <groupId>loc.task</groupId>
+    <version>2.0-SNAPSHOT</version>
 
+    <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.1</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+    <!--<name>DaoTaskMan</name>-->
 </project>
