--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <packaging>pom</packaging>
     <version>2.0-SNAPSHOT</version>
         <modules>
-            <module>web</module>
             <module>dao</module>
+            <module>web</module>
         </modules>
+    <name>HomeTaskManager</name>
 </project>
