--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,20 +5,38 @@
       <groupId>loc.task</groupId>
       <version>2.0-SNAPSHOT</version>
     </parent>
-  <groupId>loc.task</groupId>
+  <!--<groupId>loc.task</groupId>-->
   <artifactId>web</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <!--<version>2.0-SNAPSHOT</version>-->
   <packaging>war</packaging>
+  <dependencies>
+    <dependency>
+      <artifactId>dao</artifactId>
+      <groupId>loc.task</groupId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <!--<scope>compile</scope>-->
+    </dependency>
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
+    <!--<resources>-->
+      <!--<resource>-->
+        <!--<directory>src</directory>-->
+        <!--<excludes>-->
+          <!--<exclude>**/*.java</exclude>-->
+        <!--</excludes>-->
+      <!--</resource>-->
+    <!--</resources>-->
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -36,14 +54,10 @@
         <configuration>
           <username>ideaUs</username>
           <password>ideaPas</password>
-
           <!--<path>/${project.build.finalName}</path>-->
           <path>/taskManagerMultiModule</path>
           <warFile>target/${project.build.finalName}.war</warFile>
-          <!--<url>http://localhost:8080/manager/text</url>-->
-          <!--<url>http://localhost:8080/manager</url>-->
         </configuration>
-
         </plugin>
         <plugin>
         <artifactId>maven-war-plugin</artifactId>
@@ -54,23 +68,5 @@
       </plugin>
     </plugins>
   </build>
-  <dependencies>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.0.1</version>
-      <!--<scope>compile</scope>-->
-    </dependency>
-  	<dependency>
-  		<groupId>com.mchange</groupId>
-  		<artifactId>c3p0</artifactId>
-  		<version>0.9.5.1</version>
-  	</dependency>
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
-  </dependencies>
   <name>webTaskManager</name>
 </project>
