--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>2.0-SNAPSHOT</version>
         <modules>
             <module>dao</module>
+            <module>services</module>
             <module>web</module>
         </modules>
     <name>HomeTaskManager</name>
