--- a/web/src/main/resources/error.properties
+++ b/web/src/main/resources/error.properties
@@ -1,6 +1,6 @@
-message.loginerror = Incorrect login or password!
-message.nullpage = Page is not found! Business logic error!
-message.wrongaction = : command is not found or wrong!
+message.login.error = Incorrect login or password!
+message.null.page = Page is not found! Business logic error!
+message.wrong.action = : command is not found or wrong!
 message.logout = Logout is true!
 message.true.login = Login is true!
 message.true.user = User login is true!
