add TaskService and refactor TaskAddCommand

--- a/web/src/main/resources/pageconfig.properties
+++ b/web/src/main/resources/pageconfig.properties
@@ -4,3 +4,4 @@ path.page.user= /jsp/user.jsp
 path.page.admin= /jsp/admin.jsp
 path.page.main= /jsp/main.jsp
 path.page.task= /jsp/taskDetail.jsp
+path.page.add.task= /jsp/addNewTask.jsp
