--- a/web/src/main/resources/error.properties
+++ b/web/src/main/resources/error.properties
@@ -9,9 +9,10 @@ message.need.login = Please, login!
 message.hello.user = Hello, User!
 message.hello.admin = Hello, Admin!
 message.task.add = New task was added! Id= 
-message.task.addfalse = New task was not added! ERROR! 
+message.task.add.false = New task was not added! ERROR!
 error.illegal.operation = Illegal operation!
 error.connection = Connection error! 
 task.update = Task was updated! New task Id:
 task.update.false = Task was not note updated! Task Id:
 task.detail.false = Error! Details of task were not updated! Task Id:
+task.incorrect.deadline = Error! Incorrect deadline date!
