--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -5,13 +5,11 @@
     <parent>
         <artifactId>bobko-task-manager</artifactId>
         <groupId>loc.task</groupId>
-        <version>2.0-SNAPSHOT</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dao</artifactId>
-    <groupId>loc.task</groupId>
-    <version>2.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
     <dependencies>
@@ -21,23 +19,15 @@
             <version>0.9.5.1</version>
         </dependency>
         <dependency>
-            <artifactId>dao</artifactId>
-            <groupId>loc.task</groupId>
-            <version>2.0-SNAPSHOT</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.39</version>
+        </dependency>
+        <dependency>
+            <groupId>org.clojure</groupId>
+            <artifactId>java.jdbc</artifactId>
+            <version>0.6.1</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <!--<name>DaoTaskMan</name>-->
+    <name>DaoTaskMan</name>
 </project>
