--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,76 @@
     <groupId>loc.task</groupId>
     <artifactId>bobko-task-manager</artifactId>
     <packaging>pom</packaging>
-    <version>2.0-SNAPSHOT</version>
-        <modules>
-            <module>dao</module>
-            <module>services</module>
-            <module>web</module>
-        </modules>
-    <name>HomeTaskManager</name>
+    <version>1.2-SNAPSHOT</version>
+    <modules>
+        <module>dao</module>
+        <module>services</module>
+        <module>web</module>
+    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+    <build>
+        <finalName>taskManager</finalName>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <!--<version>2.2</version>-->
+                    <configuration>
+                        <server>tomcatLocal</server>
+                        <username>ideaUs</username>
+                        <password>ideaPas</password>
+                        <url>http://localhost:8080/manager/text</url>
+                        <!--<path>/${project.build.finalName}</path>-->
+                        <path>/taskManager</path>
+                        <!--<warFile>target/${project.build.finalName}.war</warFile>-->
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+            </plugin>
+        </plugins>
+    </reporting>
+    <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>tomcatLocal</id>
+            <name>tomcatLocal</name>
+            <url>http://localhost:8080/manager/text</url>
+            <layout>default</layout>
+        </repository>
+    </distributionManagement>
+    <name>taskManager</name>
 </project>
