--- a/services/pom.xml
+++ b/services/pom.xml
@@ -5,19 +5,20 @@
     <parent>
         <artifactId>bobko-task-manager</artifactId>
         <groupId>loc.task</groupId>
-        <version>2.0-SNAPSHOT</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <packaging>jar</packaging>
+    <artifactId>services</artifactId>
 
-    <artifactId>servise</artifactId>
+
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <artifactId>dao</artifactId>
             <groupId>loc.task</groupId>
-            <version>2.0-SNAPSHOT</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
+    <name>serviseTaskManager</name>
 </project>
