--- a/web/pom.xml
+++ b/web/pom.xml
@@ -1,77 +1,62 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-      <artifactId>bobko-task-manager</artifactId>
-      <groupId>loc.task</groupId>
-      <version>2.0-SNAPSHOT</version>
+        <artifactId>bobko-task-manager</artifactId>
+        <groupId>loc.task</groupId>
+        <version>1.2-SNAPSHOT</version>
     </parent>
-  <!--<groupId>loc.task</groupId>-->
-  <artifactId>web</artifactId>
-  <!--<version>2.0-SNAPSHOT</version>-->
-  <packaging>war</packaging>
-  <dependencies>
-    <dependency>
-      <artifactId>servise</artifactId>
-      <groupId>loc.task</groupId>
-      <version>2.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <artifactId>dao</artifactId>
-      <groupId>loc.task</groupId>
-      <version>2.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.0.1</version>
-      <!--<scope>compile</scope>-->
-    </dependency>
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
-  </dependencies>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-        </plugin>
-        <plugin>
-          <!-- https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin -->
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.2</version>
-        <configuration>
-          <username>ideaUs</username>
-          <password>ideaPas</password>
-          <!--<path>/${project.build.finalName}</path>-->
-          <path>/taskman</path>
-          <warFile>target/${project.build.finalName}.war</warFile>
-        </configuration>
-        </plugin>
-        <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.0.0</version>
-        <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <name>webTaskManager</name>
+
+    <artifactId>web</artifactId>
+
+    <packaging>war</packaging>
+
+    <dependencies>
+        <dependency>
+            <artifactId>services</artifactId>
+            <groupId>loc.task</groupId>
+            <version>1.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <!--<scope>compile</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <!-- https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin -->
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <server>tomcatLocal</server>
+                    <username>ideaUs</username>
+                    <password>ideaPas</password>
+                    <url>http://localhost:8080/manager/text</url>
+                    <path>/${project.build.finalName}</path>
+                    <!--<path>/taskManager</path>-->
+                    <warFile>target/${project.build.finalName}.war</warFile>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <!--<warSourceDirectory>WebContent</warSourceDirectory>-->
+                    <webappDirectory>WebContent</webappDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <name>webTaskManager</name>
 </project>
