--- a/web/pom.xml
+++ b/web/pom.xml
@@ -11,6 +11,11 @@
   <packaging>war</packaging>
   <dependencies>
     <dependency>
+      <artifactId>servise</artifactId>
+      <groupId>loc.task</groupId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <artifactId>dao</artifactId>
       <groupId>loc.task</groupId>
       <version>2.0-SNAPSHOT</version>
