--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,15 @@
     </dependencies>
     <build>
         <finalName>taskManager</finalName>
-
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <pluginManagement>
             <plugins>
                 <plugin>
