--- a/dao/src/main/resources/sql.properties
+++ b/dao/src/main/resources/sql.properties
@@ -1,7 +1,7 @@
 user.table = users
 task.table = tasks
 meta.table = task_meta
-user.insert = INSERT INTO $users VALUES (?,?,?);
+user.insert = INSERT INTO $users VALUES (?,?,?,?);
 user.select = SELECT * from $users where user_id=?;
 user.select.login = SELECT * from $users where login=?;
 user.delete = DELETE FROM $users WHERE user_id=?;
@@ -9,7 +9,8 @@ user.delete = DELETE FROM $users WHERE user_id=?;
 task.insert = INSERT INTO $tasks VALUES (?,?,?,?,?,?);
 task.update = UPDATE $tasks SET task_id=?,title=?, date_creation=?,body=?,deadline=?,history=? WHERE task_id=?;
 task.select = SELECT * from $tasks where task_id=?;
-task.select.current.for.id = SELECT * FROM $tasks join $meta USING (task_id) WHERE user_id=? AND status_id<6;
+task.select.current.id = SELECT * FROM $tasks join $meta USING (task_id) WHERE user_id=? AND status_id<6;
+task.select.current.superior = SELECT * FROM $tasks join $meta USING (task_id) WHERE status_id IN (2,4,5);
 task.update.history = UPDATE $tasks SET history =? WHERE task_id =?;
 task.delete = DELETE FROM $tasks SET status_id =? WHERE task_id=?;
 user.task.insert = INSERT INTO $meta VALUES (?,?,?);
