--- a/pom.xml
+++ b/pom.xml
@@ -10,29 +10,26 @@
     <version>1.2-SNAPSHOT</version>
 
     <properties>
-        <hibernate.version>4.3.9.Final</hibernate.version>
+        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
         <cobertura.version>2.7</cobertura.version>
         <junit.version>4.12</junit.version>
-        <mysql.connector.version>5.1.39</mysql.connector.version>
+        <maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
+        <log4j.version>2.6.1</log4j.version>
+        <!--добавить лог-->
     </properties>
 
-    <modules>
-        <module>dao</module>
-        <module>services</module>
-        <module>web</module>
-    </modules>
+    <dependencyManagement>
+        <dependencies>
+            <!-- Logger -->
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>git
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.connector.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>cobertura-maven-plugin</artifactId>
@@ -45,6 +42,14 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <modules>
+        <module>dao</module>
+        <module>services</module>
+        <module>web</module>
+        <module>testHibernate</module>
+    </modules>
+
     <build>
         <finalName>taskManager</finalName>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -67,9 +72,7 @@
                         <username>ideaUs</username>
                         <password>ideaPas</password>
                         <url>http://localhost:8080/manager/text</url>
-                        <!--<path>/${project.build.finalName}</path>-->
                         <path>/taskManager</path>
-                        <!--<warFile>target/${project.build.finalName}.war</warFile>-->
                     </configuration>
                 </plugin>
             </plugins>
@@ -77,7 +80,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
