--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,6 +10,12 @@
     <artifactId>web</artifactId>
 
     <packaging>war</packaging>
+    <properties>
+        <servlet.version>3.0.1</servlet.version>
+        <jstl.version>1.2</jstl.version>
+        <war.plugin.version>3.0.0</war.plugin.version>
+        <tomcat7.plugin.version>2.2</tomcat7.plugin.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -20,13 +26,13 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
+            <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <version>${jstl.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -35,25 +41,23 @@
                 <!-- https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin -->
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
+                <version>${tomcat7.plugin.version}</version>
                 <configuration>
                     <server>tomcatLocal</server>
                     <username>ideaUs</username>
                     <password>ideaPas</password>
                     <url>http://localhost:8080/manager/text</url>
                     <path>/${project.build.finalName}</path>
-                    <!--<path>/taskManager</path>-->
                     <warFile>target/${project.build.finalName}.war</warFile>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${war.plugin.version}</version>
                 <configuration>
                     <warSourceDirectory>WebContent</warSourceDirectory>
                     <webappDirectory>/usr/share/tomcat7/webapps/taskManager</webappDirectory>
                 </configuration>
-
             </plugin>
         </plugins>
     </build>
