--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -16,6 +16,8 @@
         <mysql.connector.version>5.1.39</mysql.connector.version>
         <c3p0.version>0.9.5.1</c3p0.version>
         <jdbc.version>0.6.1</jdbc.version>
+        <slf4j.version>1.5.6</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -35,13 +37,34 @@
             <version>${jdbc.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
     </dependencies>
