--- a/web/src/main/resources/status.properties
+++ b/web/src/main/resources/status.properties
@@ -1,7 +1,7 @@
 1 = New
-2 = In approve
-3 = In production
-4 = In checking
-5 = In report
+2 = Waiting for approve
+3 = In process
+4 = Waiting for review
+5 = Waiting for reporting
 6 = Ready
 7 = Delete
