--- a/web/pom.xml
+++ b/web/pom.xml
@@ -15,6 +15,7 @@
         <jstl.version>1.2</jstl.version>
         <war.plugin.version>3.0.0</war.plugin.version>
         <tomcat7.plugin.version>2.2</tomcat7.plugin.version>
+        <spring.security.version>4.0.3.RELEASE</spring.security.version>
     </properties>
 
     <dependencies>
@@ -34,6 +35,26 @@
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
         </dependency>
+
+        <!-- Spring Security -->
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
