--- a/web/src/main/resources/pageconfig.properties
+++ b/web/src/main/resources/pageconfig.properties
@@ -1,8 +1,8 @@
 path.page.index= /index.jsp
-path.page.login= /jsp/login.jsp
-path.page.user= /jsp/user.jsp
-path.page.admin= /jsp/admin.jsp
-path.page.superior= /jsp/superior.jsp
-path.page.main= /jsp/main.jsp
-path.page.task= /jsp/taskDetail.jsp
-path.page.add.task= /jsp/addNewTask.jsp
+path.page.login= login.jsp
+path.page.user= user.jsp
+path.page.admin= admin.jsp
+path.page.superior= superior.jsp
+path.page.main= main.jsp
+path.page.task= taskDetail.jsp
+path.page.add.task= addNewTask.jsp
